--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
+    <h1>Jorge Ivan Ramos Zebadúa</h1>
 <body>
 
     <script src="js/main.js"></script>
