--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Hola Koders!</h1>
     <h1>Jorge Ivan Ramos Zebadúa</h1>
     <h1>Israel Salinas Martínez</h1>
+    <h1>Ignacio Mendoza</h1>
 
     <script src="js/main.js"></script>
 </body>
